--- a/applications/primo/styles-imports/_advanced-search-tile.scss
+++ b/applications/primo/styles-imports/_advanced-search-tile.scss
@@ -179,6 +179,10 @@
           margin: 0;
         }
 
+        input#search_field {
+          width: 90%;
+        }
+
         .EXLBrowseFieldRibbon {
           padding: 0;
           width: 80vw;
